cmake_minimum_required(VERSION 3.14)
project(c_star C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(web)
add_subdirectory(leetcode)
#add_subdirectory(makegrammar)
add_subdirectory(programx)
add_subdirectory(utils)
add_subdirectory(gram_dn)
add_subdirectory(grammar)
add_subdirectory(Books)

#cmake_minimum_required(VERSION 3.14)
#project(DS_YWM)
#set(CMAKE_C_STANDARD 11)
add_subdirectory(DS_Y_W_M)

