
#cmake_minimum_required(VERSION 3.14)
#project(C_Modern_Approach)
#set(CMAKE_C_STANDARD 99)
add_executable(ch01_introducing ch01_introducing/course.c)
add_executable(ch02_fundamentals ch02_fundamentals/1_simple_program.c)
add_executable(ch07_basic_typs ch07_basic_typs/course.c)
add_executable(ch06_loops ch06_loops/course.c)
add_executable(ch03_formate_input_output ch03_formate_input_output/course.c)
add_executable(ch03_formate_input_output_conversion ch03_formate_input_output/conversion_specification.c)
add_executable(ch08_arrays ch08_arrays/course.c)
add_executable(ch09_function ch09_function/course.c)
add_executable(ch10_program_organization ch10_program_organization/course.c)
add_executable(ch11_pointers ch11_pointers/course.c)
add_executable(ch12_pointer_and_arrays ch12_pointer_and_arrays/course_1.c)
add_executable(ch12_pointer_and_arrays_2 ch12_pointer_and_arrays/course_2.c)
add_executable(ch12_pointer_and_arrays_3 ch12_pointer_and_arrays/course_3.c)
add_executable(ch12_pointer_and_arrays_4 ch12_pointer_and_arrays/course_4.c)
add_executable(ch12_pointer_and_arrays_5 ch12_pointer_and_arrays/course_5.c)
add_executable(ch13_string_1 ch13_string/course_1.c)
add_executable(ch13_string_2 ch13_string/course_2.c)
add_executable(ch13_string_3 ch13_string/course_3.c)
add_executable(ch13_string_4 ch13_string/course_4.c)
add_executable(ch13_string_5 ch13_string/course_5.c)
add_executable(ch13_string_6 ch13_string/course_6.c)
add_executable(ch13_string_7 ch13_string/course_7.c)
add_executable(ch14_preprocessor_1 ch14_preprocessor/course1.c)
add_executable(ch14_preprocessor_2 ch14_preprocessor/course2.c)
add_executable(ch15_write_large_program_1 ch15_write_large_program/course1.c ch15_write_large_program/course1.h)
add_executable(ch16_struct_union_enum_1 ch16_struct_union_enum/course1.c)
add_executable(ch17_advance_use_pointer_1 ch17_advance_use_pointer/course1.c ch17_advance_use_pointer/read_line.h)
add_executable(ch17_advance_use_pointer_2 ch17_advance_use_pointer/LinkList.c ch17_advance_use_pointer/read_line.h)
add_executable(ch19_program_design_1 ch19_program_design/cs1_stack.h ch19_program_design/cs1_stack_impl1.c)
add_executable(ch19_program_design_2 ch19_program_design/cs1_stack.h ch19_program_design/cs1_stack_impl2.c)
add_executable(ch19_program_design_3 ch19_program_design/cs1_stack.h ch19_program_design/cs1_stack_impl3.c)
add_executable(ch22_io_1 ch22_io/course1_scanf_tips.c)